Fixed stretching of panels

--- a/css/myStyles.css
+++ b/css/myStyles.css
@@ -30,7 +30,8 @@ a {
 }
 #emergency{
   width: 100%;
-  height:50vh;
+  overflow:auto;
+  padding-bottom: 10vh;
 
   background-color: #049EE0;
 
@@ -40,8 +41,8 @@ a {
 }
 #advice{
   float: left;
-  width: 31vw;
-  height: 50vh;
+  width: 33vw;
+  height: 40vh;
   background-color: #0A48E3;
    display: inline-block;
 }
@@ -51,8 +52,9 @@ a {
 #journal{
 
 float: left;
-  width: 31vw;
-  height: 50vh;
+width: 33vw;
+height: 40vh;
+
   background-color: #2A50AE;
    display: inline-block;
 }
@@ -62,7 +64,8 @@ float: left;
 #calm{
   float: left;
   width: 33vw;
-  height: 50vh;
+  height: 40vh;
+
   background-color: #68D1FF;
    display: inline-block;
 }
@@ -72,6 +75,13 @@ float: left;
 
 #bookmark:hover{
     background-color: #00E48E;
+}
+
+#calm #journal #advice{
+   display: table-cell;
+   overflow:auto;
+   padding-left: 5vh;
+   padding-right: 5vh;
 }
 
 
@@ -85,7 +95,7 @@ float: left;
 .row{
    display: table;
    width: 100%;
-   height: 10%;
+   height: 5%;
    text-align:center;
 }
 * {
@@ -96,7 +106,7 @@ padding: 0px;
 .container {
     text-align: center;
     vertical-align: middle;
-   
+
 }
 
 .flip-clock {
